[package]
name = "example_contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]
[dependencies]
cosmwasm-std = "1.5.2"
cw-storage-plus = "1.2.0"
serde = { version = "1.0.196", features = ["derive"] }

[dev-dependencies]
cw-multi-test = "0.20.0"
